--- a/ckip_transformers.html
+++ b/ckip_transformers.html
@@ -1,1 +1,6 @@
-This page has been moved to https://ckip-transformers.readthedocs.io/en/latest/_api/ckip_transformers.html
++--------------------------------------------------------------------------------+
+|                                                                                |
+|                         This page has been moved to                            |
+| https://ckip-transformers.readthedocs.io/en/latest/_api/ckip_transformers.html |
+|                                                                                |
++--------------------------------------------------------------------------------+
